deployment/helm-kustomize/environments/dev2/kustomized_resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.1.0
    helm.sh/chart: postgresql-16.2.1
  name: capwiki-postgresdb
  namespace: capwiki
spec:
  ports:
  - name: tcp-postgresql
    nodePort: null
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: capwiki
    app.kubernetes.io/version: latest
    helm.sh/chart: capwiki-2.2.0
  name: capwiki-svc
  namespace: capwiki
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/name: capwiki
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.1.0
    helm.sh/chart: postgresql-16.2.1
  name: capwiki-postgresdb-hl
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/name: postgresql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: capwiki
    app.kubernetes.io/version: latest
    helm.sh/chart: capwiki-2.2.0
  name: capwiki-app
  namespace: capwiki
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: capwiki
      app.kubernetes.io/name: capwiki
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/instance: capwiki
        app.kubernetes.io/name: capwiki
    spec:
      containers:
      - env:
        - name: NODE_EXTRA_CA_CERTS
          value: /usr/local/share/ca-certificates/keycloak-host-full-chain-cert.pem
        - name: DB_TYPE
          value: postgres
        - name: DB_HOST
          value: capwiki-postgresdb
        - name: DB_PORT
          value: "5432"
        - name: DB_NAME
          value: wiki
        - name: DB_USER
          value: postgres
        - name: DB_SSL
          value: "false"
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: postgresql-password
              name: capwiki-postgresdb-secret
        - name: HA_ACTIVE
          value: "false"
        image: docker-registry-pt-support-shared.pl.s2-eu.capgemini.com/mar/capwiki:latest-staging
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        name: capwiki
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        resources: {}
        securityContext: {}
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
      imagePullSecrets:
      - name: capwiki-nexus-registry
      securityContext: {}
      serviceAccountName: capwiki-deploy-sa
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.1.0
    helm.sh/chart: postgresql-16.2.1
  name: capwiki-postgresdb
  namespace: capwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: capwiki
      app.kubernetes.io/name: postgresql
  serviceName: capwiki-postgresdb-hl
  template:
    metadata:
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: capwiki
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 17.1.0
        helm.sh/chart: postgresql-16.2.1
      name: capwiki-postgresdb
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: primary
                  app.kubernetes.io/instance: capwiki
                  app.kubernetes.io/name: postgresql
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: false
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: POSTGRESQL_PORT_NUMBER
          value: "5432"
        - name: POSTGRESQL_VOLUME_DIR
          value: /bitnami/postgresql
        - name: PGDATA
          value: /bitnami/postgresql/data
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgresql-password
              name: capwiki-postgresdb-secret
        - name: POSTGRES_DATABASE
          value: wiki
        - name: POSTGRESQL_ENABLE_LDAP
          value: "no"
        - name: POSTGRESQL_ENABLE_TLS
          value: "no"
        - name: POSTGRESQL_LOG_HOSTNAME
          value: "false"
        - name: POSTGRESQL_LOG_CONNECTIONS
          value: "false"
        - name: POSTGRESQL_LOG_DISCONNECTIONS
          value: "false"
        - name: POSTGRESQL_PGAUDIT_LOG_CATALOG
          value: "off"
        - name: POSTGRESQL_CLIENT_MIN_MESSAGES
          value: error
        - name: POSTGRESQL_SHARED_PRELOAD_LIBRARIES
          value: pgaudit
        image: docker.io/bitnami/postgresql:17.1.0-debian-12-r0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "postgres" -d "dbname=wiki" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: postgresql
        ports:
        - containerPort: 5432
          name: tcp-postgresql
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - |
              exec pg_isready -U "postgres" -d "dbname=wiki" -h 127.0.0.1 -p 5432
              [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: empty-dir
          subPath: tmp-dir
        - mountPath: /opt/bitnami/postgresql/conf
          name: empty-dir
          subPath: app-conf-dir
        - mountPath: /opt/bitnami/postgresql/tmp
          name: empty-dir
          subPath: app-tmp-dir
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /bitnami/postgresql
          name: data
      hostIPC: false
      hostNetwork: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: capwiki-postgresdb
      volumes:
      - emptyDir: {}
        name: empty-dir
      - emptyDir:
          medium: Memory
        name: dshm
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: capwiki
    app.kubernetes.io/version: latest
    helm.sh/chart: capwiki-2.2.0
  name: capwiki-ingress
  namespace: capwiki
spec:
  ingressClassName: nginx
  rules:
  - host: dev2-capwiki.corp.capgemini.com
    http:
      paths:
      - backend:
          service:
            name: capwiki-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev2-capwiki.corp.capgemini.com
    secretName: dev2-capwiki-internal-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: capwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.1.0
    helm.sh/chart: postgresql-16.2.1
  name: capwiki-postgresdb
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: capwiki
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  - Egress
